--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -152,7 +152,8 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_multi_recv.py \
 	pytest/efa/test_rnr.py \
 	pytest/efa/test_efa_info.py \
-	pytest/efa/test_runt.py
+	pytest/efa/test_runt.py \
+	pytest/efa/test_fork_support.py
 
 noinst_LTLIBRARIES = libfabtests.la
 
