prov/tcp2: Rename to net provider
The provider will publish itself as both the net provider and
the tcp provider, once validated.  The net provider will allow
it to run over other protocols in the future without confusion
(such as rds or quic).

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/configure.ac
+++ b/configure.ac
@@ -824,7 +824,7 @@ FI_PROVIDER_SETUP([usnic])
 FI_PROVIDER_SETUP([gni])
 FI_PROVIDER_SETUP([udp])
 FI_PROVIDER_SETUP([tcp])
-FI_PROVIDER_SETUP([tcp2])
+FI_PROVIDER_SETUP([xnet])
 FI_PROVIDER_SETUP([rxm])
 FI_PROVIDER_SETUP([mrail])
 FI_PROVIDER_SETUP([rxd])
