prov/efa: adjust the test_duplicate_efa_ah_creation() test case
test_duplicate_efa_ah_creation() verify that when duplicate
GID was inserted to address vector (AV), ibv_create_ah() was
called only once.

This patch moved the test case from src/efa_av.c to
test/efa_unit_test_av.c, and split it into two test case:

     test_av_insert_duplicate_raw_addr()
     test_av_insert_duplicate_gid()

It adjusted the wrap function __wrap_ibv_create_ah() to increase
global counter g_ibv_create_ah_call_counter, and call the
real ibv_create_ah.

With this change, there is no need to mock ibv_destroy_ah()
and efa_query_ah(), therefore this patch removed these two
mocks.

With this change, there is no need to mock return value of
ibv_create_ah(), therefore this patch removed such mock
values.

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -99,18 +99,15 @@ nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/rdma_core_mocks.c \
 	prov/efa/test/efa_unit_test_mocks.c \
 	prov/efa/test/efa_unit_test_common.c \
-	prov/efa/test/efa_unit_test_ep.c
+	prov/efa/test/efa_unit_test_ep.c \
+	prov/efa/test/efa_unit_test_av.c
 
-_efa_files += prov/efa/test/efa_unit_test_common.c
 efa_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
-
 
 prov_efa_test_efa_unit_test_CPPFLAGS = $(efa_CPPFLAGS)
 prov_efa_test_efa_unit_test_LDADD = $(cmocka_LIBS) $(linkback)
 prov_efa_test_efa_unit_test_LDFLAGS = $(cmocka_rpath) $(efa_LDFLAGS) $(cmocka_LDFLAGS) \
 					-Wl,--wrap=ibv_create_ah \
-					-Wl,--wrap=ibv_destroy_ah \
-					-Wl,--wrap=efadv_query_ah \
 					-Wl,--wrap=efadv_query_device \
 					-Wl,--wrap=rxr_pkt_handle_send_completion \
 					-Wl,--wrap=rxr_pkt_handle_recv_completion \
