prov/efa: convert ep_progress test to cq test
This patch converted 6 ep_progress unit tests:

	test_dgram_ep_progress_with_empty_cq()
	test_dgram_ep_progress_encounter_bad_wc_status()
	test_rdm_ep_progress_send_empty_cq()
	test_rdm_ep_progress_failed_poll()
	test_rdm_ep_progress_bad_send_wc_status()
	test_rdm_ep_progress_bad_recv_wc_status()

to CQ unit tests:

	test_dgram_cq_read_empty_cq();
	test_dgram_cq_read_bad_wc_status();
	test_rdm_cq_read_empty_cq();
	test_rdm_cq_read_failed_poll();
	test_rdm_cq_read_bad_send_status();
	test_rdm_cq_read_bad_recv_status();

The new unit tests directly call fi_cq_read()
and fi_cq_readerr()/fi_eq_readerr() and verify
the resulted CQ and EQ entry is correct.

It also removed 3 unit test that tests happy path,
because happy path is tested extensively in fabtest.

With this change, there is no need to mock RxR packet handling
functions, so this patch removed it.

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -100,6 +100,7 @@ nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/efa_unit_test_common.c \
 	prov/efa/test/efa_unit_test_ep.c \
 	prov/efa/test/efa_unit_test_av.c \
+	prov/efa/test/efa_unit_test_cq.c \
 	prov/efa/test/efa_unit_test_device.c
 
 efa_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
@@ -108,11 +109,7 @@ prov_efa_test_efa_unit_test_CPPFLAGS = $(efa_CPPFLAGS)
 prov_efa_test_efa_unit_test_LDADD = $(cmocka_LIBS) $(linkback)
 prov_efa_test_efa_unit_test_LDFLAGS = $(cmocka_rpath) $(efa_LDFLAGS) $(cmocka_LDFLAGS) \
 					-Wl,--wrap=ibv_create_ah \
-					-Wl,--wrap=efadv_query_device \
-					-Wl,--wrap=rxr_pkt_handle_send_completion \
-					-Wl,--wrap=rxr_pkt_handle_recv_completion \
-					-Wl,--wrap=rxr_pkt_handle_send_error \
-					-Wl,--wrap=rxr_pkt_handle_recv_error
+					-Wl,--wrap=efadv_query_device
 prov_efa_test_efa_unit_test_LIBS = $(efa_LIBS) $(linkback)
 
 endif ENABLE_EFA_UNIT_TEST
