prov/net: Align provider name with configure name
Rename xnet directory to net and update build scripts to use
net instead of xnet.

The directory name and provider names need to match.  When
building a provider, the directory name is used with the
configure arguments (e.g. --enable-xnet).  This causes
confusion if the name differs from what the provider is
called (net in this case).

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -721,21 +721,21 @@
     <ClCompile Include="prov\tcp\src\tcpx_eq.c" />
     <ClCompile Include="prov\tcp\src\tcpx_init.c" />
     <ClCompile Include="prov\tcp\src\tcpx_progress.c" />
-    <ClCompile Include="prov\xnet\src\xnet_attr.c" />
-    <ClCompile Include="prov\xnet\src\xnet_cm.c" />
-    <ClCompile Include="prov\xnet\src\xnet_cq.c" />
-    <ClCompile Include="prov\xnet\src\xnet_domain.c" />
-    <ClCompile Include="prov\xnet\src\xnet_ep.c" />
-    <ClCompile Include="prov\xnet\src\xnet_eq.c" />
-    <ClCompile Include="prov\xnet\src\xnet_fabric.c" />
-    <ClCompile Include="prov\xnet\src\xnet_init.c" />
-    <ClCompile Include="prov\xnet\src\xnet_msg.c" />
-    <ClCompile Include="prov\xnet\src\xnet_pep.c" />
-    <ClCompile Include="prov\xnet\src\xnet_progress.c" />
-    <ClCompile Include="prov\xnet\src\xnet_rdm.c" />
-    <ClCompile Include="prov\xnet\src\xnet_rdm_cm.c" />
-    <ClCompile Include="prov\xnet\src\xnet_rma.c" />
-    <ClCompile Include="prov\xnet\src\xnet_srx.c" />
+    <ClCompile Include="prov\net\src\xnet_attr.c" />
+    <ClCompile Include="prov\net\src\xnet_cm.c" />
+    <ClCompile Include="prov\net\src\xnet_cq.c" />
+    <ClCompile Include="prov\net\src\xnet_domain.c" />
+    <ClCompile Include="prov\net\src\xnet_ep.c" />
+    <ClCompile Include="prov\net\src\xnet_eq.c" />
+    <ClCompile Include="prov\net\src\xnet_fabric.c" />
+    <ClCompile Include="prov\net\src\xnet_init.c" />
+    <ClCompile Include="prov\net\src\xnet_msg.c" />
+    <ClCompile Include="prov\net\src\xnet_pep.c" />
+    <ClCompile Include="prov\net\src\xnet_progress.c" />
+    <ClCompile Include="prov\net\src\xnet_rdm.c" />
+    <ClCompile Include="prov\net\src\xnet_rdm_cm.c" />
+    <ClCompile Include="prov\net\src\xnet_rma.c" />
+    <ClCompile Include="prov\net\src\xnet_srx.c" />
     <ClCompile Include="prov\udp\src\udpx_attr.c" />
     <ClCompile Include="prov\udp\src\udpx_cq.c" />
     <ClCompile Include="prov\udp\src\udpx_domain.c" />
