--- a/Makefile.am
+++ b/Makefile.am
@@ -435,7 +435,7 @@ include prov/bgq/Makefile.include
 include prov/opx/Makefile.include
 include prov/shm/Makefile.include
 include prov/tcp/Makefile.include
-include prov/xnet/Makefile.include
+include prov/net/Makefile.include
 include prov/rstream/Makefile.include
 include prov/hook/Makefile.include
 include prov/hook/perf/Makefile.include
