prov/efa: Define EFA-specific error codes
This defines error codes and corresponding strings specific to EFA, and
passes them to API functions which expect a provider-specific error
code. Where applicable, the vendor error is read from an "extended" IBV
completion queue.

Signed-off-by: Darryl Abbate <drl@amazon.com>

--- a/libfabric.vcxproj
+++ b/libfabric.vcxproj
@@ -873,6 +873,7 @@
     <ClCompile Include="prov\efa\src\efa_msg.c" />
     <ClCompile Include="prov\efa\src\efa_rma.c" />
     <ClCompile Include="prov\efa\src\efa_shm.c" />
+    <ClCompile Include="prov\efa\src\efa_strerror.c" />
     <ClCompile Include="prov\efa\src\efa_user_info.c" />
     <ClCompile Include="prov\efa\src\efa_prov_info.c" />
     <ClCompile Include="prov\efa\src\efa_fork_support.c" />
