--- a/fabtests/pytest/pytest.ini
+++ b/fabtests/pytest/pytest.ini
@@ -8,6 +8,7 @@ markers =
     ubertest_all: ubertest tests run will all config
     ubertest_quick: ubertest tests run with quick config
     ubertest_verify: ubertest tests run with verify config
+    cuda_memory: testing with cuda device memory direct
 junit_suite_name = fabtests
 junit_logging = all
 junit_log_passing_tests = true
