--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -101,7 +101,8 @@ nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/efa_unit_test_ep.c \
 	prov/efa/test/efa_unit_test_av.c \
 	prov/efa/test/efa_unit_test_cq.c \
-	prov/efa/test/efa_unit_test_device.c
+	prov/efa/test/efa_unit_test_device.c \
+	prov/efa/test/efa_unit_test_info.c
 
 efa_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
 
