contrib/intel/jenkins: add multinode performance
runmultinode.sh will be run by the ci. This data will
eventually be used for regression testing. fi_mulitnode
will be run with 128 ranks over 2 nodes on one iteration
to test connection managment timing.

Signed-off-by: Alex McKinley <alex.mckinley@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -372,6 +372,23 @@ pipeline {
             }
           }
         }
+        stage('multinode-tcp-performance') {
+          agent {node {label 'cvl'}}
+          options { skipDefaultCheckout() }
+          steps {
+              withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH'])
+              {
+                sh """
+                  env
+                  (
+                      cd /opt${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
+                      python3.7 runtests.py --prov=tcp --test=multinode
+                      echo "multinode performance completed."
+                  )
+                """
+              }
+          }
+        }
         stage('oneCCL') {
           agent {node {label 'cvl'}}
           options { skipDefaultCheckout() }
