--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -84,6 +84,7 @@ endif HAVE_LIBZE_DEVEL
 dist_bin_SCRIPTS = \
 	scripts/runfabtests.sh \
 	scripts/runfabtests.py \
+	scripts/runmultinode.sh \
 	scripts/rft_yaml_to_junit_xml
 
 dist_noinst_SCRIPTS = \
