fabtests: New fi_rdm_rpc_bw benchmark
Reusing the fabtest RPC framework to implement an RPC benchmark.

Default capabilities and MR mode bits enable this benchmark to run over
verbs;ofi_rxm, tcp;ofi_rxm, and cxi providers.

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -54,6 +54,7 @@ bin_PROGRAMS = \
 	benchmarks/fi_rdm_pingpong \
 	benchmarks/fi_rdm_tagged_pingpong \
 	benchmarks/fi_rdm_tagged_bw \
+	benchmarks/fi_rdm_rpc_bw \
 	unit/fi_eq_test \
 	unit/fi_cq_test \
 	unit/fi_mr_test \
@@ -375,6 +376,11 @@ benchmarks_fi_rdm_tagged_bw_SOURCES = \
 	$(benchmarks_srcs)
 benchmarks_fi_rdm_tagged_bw_LDADD = libfabtests.la
 
+benchmarks_fi_rdm_rpc_bw_SOURCES = \
+	benchmarks/rdm_rpc_bw.c \
+	$(benchmarks_srcs) \
+	$(rpc_srcs)
+benchmarks_fi_rdm_rpc_bw_LDADD = libfabtests.la
 
 unit_fi_eq_test_SOURCES = \
 	unit/eq_test.c \
