core and prov/shm: Implement and use ipc_cache.
Opening and closing the HMEM IPC handles are expensive operations. They
should not be performed on every data operation.

This patch adds a caching mechanism. On the very first IPC handle open
call, the address is cached and the mapped memory address is stored. In
subsequent calls the cache is queried and the mapped address is retrieved.

The cache is created as an object of ofi_mr_cache, with the following component:
cache->add_region: open the ipc handle
cache->delete_region: close the ipc handle
cache->monitor: the created ipc monitor.

Signed-off-by: Shi Jin <sjina@amazon.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,7 @@ common_srcs =				\
 	src/hmem_ze.c			\
 	src/hmem_neuron.c		\
 	src/hmem_synapseai.c		\
+	src/hmem_ipc_cache.c	        \
 	src/common.c			\
 	src/enosys.c			\
 	src/rbtree.c			\
@@ -83,6 +84,7 @@ common_srcs =				\
 	prov/util/src/cuda_mem_monitor.c \
 	prov/util/src/rocr_mem_monitor.c \
 	prov/util/src/ze_mem_monitor.c \
+	prov/util/src/cuda_ipc_monitor.c \
 	prov/util/src/util_coll.c
 
 
