--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -113,6 +113,11 @@ prov_efa_test_efa_unit_test_LDADD = $(cmocka_LIBS) $(linkback)
 prov_efa_test_efa_unit_test_LDFLAGS = $(cmocka_rpath) $(efa_LDFLAGS) $(cmocka_LDFLAGS) \
 					-Wl,--wrap=ibv_create_ah \
 					-Wl,--wrap=efadv_query_device
+
+if HAVE_EFADV_CQ_EX
+prov_efa_test_efa_unit_test_LDFLAGS += -Wl,--wrap=efadv_create_cq
+endif HAVE_EFADV_CQ_EX
+
 prov_efa_test_efa_unit_test_LIBS = $(efa_LIBS) $(linkback)
 
 endif ENABLE_EFA_UNIT_TEST
