--- a/prov/opx/Makefile.include
+++ b/prov/opx/Makefile.include
@@ -123,6 +123,7 @@ noinst_HEADERS = \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_fabric_transport.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_addr.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_debug_counters.h \
+	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_hfi1_sdma.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_endpoint.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx.h \
 	$(top_srcdir)/prov/opx/include/rdma/opx/fi_opx_flight_recorder.h \
