contrib/jenkins/intel: Add log directory to jenkins This patch adds a log directory to cstbuild location as a part of the CI summary framework. The log directory contains separate logs for each stage having a separate filename. These logs are later used for creating a summary of each stage.
Signed-off-by: Juee Himalbhai Desai <juee.himalbhai.desai@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -72,10 +72,17 @@ pipeline {
             steps {
                 withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
                   sh """
+		    env(
                     echo "-----------------------------------------------------"
                     echo "Copy build dirs."
                     python3.7 ${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/build.py --build_item=builddir
                     echo "Copy build dirs completed."
+                    echo "-----------------------------------------------------"
+
+		    echo "-----------------------------------------------------"
+                    echo "Copy log dirs."
+                    python3.7 ${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/build.py --build_item=logdir
+                    echo "Copy log dirs completed."
                     echo "-----------------------------------------------------"
 
                     echo "-----------------------------------------------------"
@@ -99,7 +106,7 @@ pipeline {
                     echo "Building fabtests dl."
                     python3.7 ${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/build.py --build_item=fabtests --ofi_build_mode=dl
                     echo 'Fabtests builds completed.'
-
+		    )
                   """
                 }
             }
