--- a/prov/efa/Makefile.include
+++ b/prov/efa/Makefile.include
@@ -104,7 +104,8 @@ nodist_prov_efa_test_efa_unit_test_SOURCES = \
 	prov/efa/test/efa_unit_test_av.c \
 	prov/efa/test/efa_unit_test_cq.c \
 	prov/efa/test/efa_unit_test_device.c \
-	prov/efa/test/efa_unit_test_info.c
+	prov/efa/test/efa_unit_test_info.c \
+	prov/efa/test/efa_unit_test_hmem.c
 
 efa_CPPFLAGS += -I$(top_srcdir)/include -I$(top_srcdir)/prov/efa/test $(cmocka_CPPFLAGS)
 
@@ -117,6 +118,10 @@ prov_efa_test_efa_unit_test_LDFLAGS = $(cmocka_rpath) $(efa_LDFLAGS) $(cmocka_LD
 if HAVE_EFADV_CQ_EX
 prov_efa_test_efa_unit_test_LDFLAGS += -Wl,--wrap=efadv_create_cq
 endif HAVE_EFADV_CQ_EX
+
+if HAVE_NEURON
+prov_efa_test_efa_unit_test_LDFLAGS += -Wl,--wrap=neuron_alloc
+endif HAVE_NEURON
 
 prov_efa_test_efa_unit_test_LIBS = $(efa_LIBS) $(linkback)
 
