--- a/prov/net/Makefile.include
+++ b/prov/net/Makefile.include
@@ -29,4 +29,8 @@ src_libfabric_la_SOURCES += $(_xnet_files)
 src_libfabric_la_LIBADD += $(xnet_shm_LIBS)
 endif !HAVE_NET_DL
 
+prov_install_man_pages += man/man7/fi_net.7
+
 endif HAVE_NET
+
+prov_dist_man_pages += man/man7/fi_net.7
