contrib/intel/jenkins: Change MPI stagenames in Jenkinsfile
This patch edits the stagename for MPI tests in Jenkinsfile.
This is done to make the stagenames consistent and hence the log
files consistent in naming.

There is also a small change to add the mpi name and shmem test name
to the run_command function.

Signed-off-by: Juee Himalbhai Desai <juee.himalbhai.desai@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -114,7 +114,7 @@ pipeline {
         stage('parallel-tests') {
             when { equals expected: 1, actual: DO_RUN }
             parallel {
-                stage('MPI-verbs-rxm') {
+                stage('MPI_verbs-rxm') {
                     agent {node {label 'mlx5'}}
                     options { skipDefaultCheckout() }
                     steps {
@@ -138,7 +138,7 @@ pipeline {
                         }
                     }
                 }
-                stage('MPI-tcp-rxm-2') {
+                stage('MPI_tcp-rxm-2') {
                     agent {node {label 'cvl'}}
                     options { skipDefaultCheckout() }
                     steps {
@@ -290,7 +290,7 @@ pipeline {
                         }
                     }
                 }
-                stage('MPI-tcp-rxm-1') {
+                stage('MPI_tcp-rxm-1') {
                     agent {node {label 'cvl'}}
                     options { skipDefaultCheckout() }
                     steps {
@@ -307,7 +307,7 @@ pipeline {
                         }
                     }
                 }
-                stage('MPI-tcp-rxm-3') {
+                stage('MPI_tcp-rxm-3') {
                     agent {node {label 'cvl'}}
                     options { skipDefaultCheckout() }
                     steps {
