contrib/intel/jenkins: Add a functional summary stage to Jenkinsfile
This stage is only viewable on passed pipelines. This is because jenkins
skips future stages if earlier stages failed. So, this stage is just to
provide a clear place to look on passed pipelines for the functional summary.
The functional summary will still be provided in the post stage inside of the
always{} clause incase of a test failure.

Signed-off-by: Zach Dworkin <zachary.dworkin@intel.com>

--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -427,6 +427,19 @@ pipeline {
                 }
             }
         }
+				stage ('Summary') {
+						when { equals expected: 1, actual: DO_RUN }
+						steps {
+								withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
+										sh """
+												env
+												(
+														python3.7 ${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/summary.py --summary_item=all
+												)
+										"""
+								}
+						}
+				}
     }
 
     post {
