--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -56,9 +56,12 @@ pipeline {
         }
         withEnv(['PATH+EXTRA=/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/bin/:$PYTHONPATH']) {
           sh """
-           mkdir ${env.WORKSPACE}/py_scripts
-            git clone ${env.UPSTREAM} ${env.WORKSPACE}/py_scripts
-            ${env.SKIP_PATH}/skip.sh ${env.WORKSPACE} ${TARGET}
+            env
+            (
+              mkdir ${env.WORKSPACE}/py_scripts
+              git clone ${env.UPSTREAM} ${env.WORKSPACE}/py_scripts
+              ${env.SKIP_PATH}/skip.sh ${env.WORKSPACE} ${TARGET}
+            )
           """
         }
         script {
