--- a/contrib/intel/jenkins/Jenkinsfile
+++ b/contrib/intel/jenkins/Jenkinsfile
@@ -508,7 +508,7 @@ pipeline {
               (
                 echo `hostname`
                 cd ${env.WORKSPACE}/py_scripts/contrib/intel/jenkins/
-                python3.9 runtests.py --prov=shm --test=fabtests --user_env="{'FI_SHM_DISABLE_CMA':1, 'FI_SHM_USE_DSA_IN_SAR':1}"
+                python3.9 runtests.py --prov=shm --test=fabtests --user_env="{'FI_SHM_DISABLE_CMA':1, 'FI_SHM_USE_DSA_SAR':1}"
               )
               """
             }
