fabtests/pytest/efa: add test cases for memory registration
added a file test_mr.py with two test cases that
test registration of host memory and cuda memory.

Signed-off-by: Wei Zhang <wzam@amazon.com>

--- a/fabtests/Makefile.am
+++ b/fabtests/Makefile.am
@@ -171,6 +171,7 @@ nobase_dist_config_DATA = \
 	pytest/efa/test_efa_info.py \
 	pytest/efa/test_runt.py \
 	pytest/efa/test_fork_support.py \
+	pytest/efa/test_mr.py \
 	pytest/shm/conftest.py \
 	pytest/shm/shm_common.py \
 	pytest/shm/test_av.py \
