configure.ac: Add detection of liburing
The patch adds the argument --with-uring[=DIR] to
enable liburing support in libfabric (disabled by
default).

Signed-off-by: Sylvain Didelot <sdidelot@ddn.com>

--- a/configure.ac
+++ b/configure.ac
@@ -522,6 +522,37 @@ AC_DEFINE_UNQUOTED(HAVE_CLOCK_GETTIME, [$have_clock_gettime],
        [Define to 1 if clock_gettime is available.])
 AM_CONDITIONAL(HAVE_CLOCK_GETTIME, [test $have_clock_gettime -eq 1])
 
+dnl Check for io_uring runtime libraries (disabled by default)
+AC_ARG_WITH([uring],
+	    [AS_HELP_STRING([--with-uring[=DIR]],
+			    [Enable uring support @<:@default=no@:>@.
+			     Optional=<Path to where liburing is installed.>])],
+	    [], [with_uring="no"])
+
+have_liburing=0
+AS_IF([test x"$with_uring" != x"no"],
+	    [FI_CHECK_PACKAGE([uring],
+			      [liburing.h],
+			      [uring],
+			      [io_uring_queue_init],
+			      [-luring],
+			      [$with_uring],
+			      [],
+			      [have_liburing=1
+			       AC_DEFINE_UNQUOTED([HAVE_LIBURING], [1], [io_uring support])]
+			      [],
+			      [])],
+	    [])
+
+AS_IF([test x"$with_uring" != x"no" && test -n "$with_uring" && test $have_liburing -eq 0],
+	[AC_MSG_ERROR([io_uring support requested but io_uring library not available.])],
+	[])
+
+AS_IF([test x"$with_uring" != x"yes" && test x"$with_uring" != x"no"],
+	[CPPFLAGS="$CPPFLAGS $uring_CPPFLAGS"
+	 LDFLAGS="$LDFLAGS $uring_LDFLAGS"])
+LIBS="$LIBS $uring_LIBS"
+
 dnl Check for CUDA runtime libraries
 AC_ARG_WITH([cuda],
 	[AS_HELP_STRING([--with-cuda=DIR],
