prov/cxi: Extend test framework.
Remove obsolete test infrastructure files. All distributed testing
should be kept in the distributed directory, and should be built on the
pmi_frmwk.

Extended to support the SLURM PMI variant.

PMI does not always work properly if included through a shared library.
Code modified to ensure PMI is initialized and terminated in the main()
function and included statically.

Signed-off-by: Joe Nemeth <joseph.nemeth@hpe.com>

--- a/prov/cxi/Makefile.include
+++ b/prov/cxi/Makefile.include
@@ -52,47 +52,53 @@ _cxi_libs = \
 
 if HAVE_PMI
 
-# Code used by all PMI-based tests
-noinst_LTLIBRARIES += prov/cxi/lib/libfrmwk.la
-prov_cxi_lib_libfrmwk_la_SOURCES = \
-	prov/cxi/include/pmi_utils.h \
-	prov/cxi/include/pmi_frmwk.h \
-	prov/cxi/test/distributed/pmi_utils.c \
-	prov/cxi/test/distributed/pmi_frmwk.c
-prov_cxi_lib_libfrmwk_la_CPPFLAGS = \
-	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
-	-DUSE_PMI2 -DUSE_CRAY_PMI \
-	-I/opt/cray/pe/pmi/default/include \
-	-L/opt/cray/pe/pmi/default/lib
-prov_cxi_lib_libfrmwk_la_LIBADD = -lpmi2
-
 # Stand-alone srun  tests for hardware testing environment
 bin_PROGRAMS += prov/cxi/test/distributed/test_pmi
 prov_cxi_test_distributed_test_pmi_SOURCES = \
+	prov/cxi/test/distributed/pmi_utils.h \
+	prov/cxi/test/distributed/pmi_utils.c \
 	prov/cxi/test/distributed/test_pmi.c
-prov_cxi_test_distributed_test_pmi_LDFLAGS = -static
-prov_cxi_test_distributed_test_pmi_LDADD = prov/cxi/lib/libfrmwk.la
+prov_cxi_test_distributed_test_pmi_CPPFLAGS = -DUSE_PMI2
+prov_cxi_test_distributed_test_pmi_LDFLAGS = -static -lpmi2
 
 bin_PROGRAMS += prov/cxi/test/distributed/test_frmwk
 prov_cxi_test_distributed_test_frmwk_SOURCES = \
+	prov/cxi/test/distributed/pmi_utils.h \
+	prov/cxi/test/distributed/pmi_utils.c \
+	prov/cxi/test/distributed/pmi_frmwk.h \
+	prov/cxi/test/distributed/pmi_frmwk.c \
 	prov/cxi/test/distributed/test_frmwk.c
-prov_cxi_test_distributed_test_frmwk_LDFLAGS = -static
-prov_cxi_test_distributed_test_frmwk_LDADD = prov/cxi/lib/libfrmwk.la \
-	$(linkback) $(PTHREAD_LIBS)
+prov_cxi_test_distributed_test_frmwk_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
+	-DUSE_PMI2
+prov_cxi_test_distributed_test_frmwk_LDFLAGS = -static -lpmi2
+prov_cxi_test_distributed_test_frmwk_LDADD = $(linkback) $(PTHREAD_LIBS)
 
 bin_PROGRAMS += prov/cxi/test/distributed/test_zbcoll
 prov_cxi_test_distributed_test_zbcoll_SOURCES = \
+	prov/cxi/test/distributed/pmi_utils.h \
+	prov/cxi/test/distributed/pmi_utils.c \
+	prov/cxi/test/distributed/pmi_frmwk.h \
+	prov/cxi/test/distributed/pmi_frmwk.c \
 	prov/cxi/test/distributed/test_zbcoll.c
-prov_cxi_test_distributed_test_zbcoll_LDFLAGS = -static
-prov_cxi_test_distributed_test_zbcoll_LDADD = prov/cxi/lib/libfrmwk.la \
-	$(linkback) $(PTHREAD_LIBS)
+prov_cxi_test_distributed_test_zbcoll_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
+	-DUSE_PMI2
+prov_cxi_test_distributed_test_zbcoll_LDFLAGS = -static -lpmi2
+prov_cxi_test_distributed_test_zbcoll_LDADD = $(linkback) $(PTHREAD_LIBS)
 
 bin_PROGRAMS += prov/cxi/test/distributed/test_coll
 prov_cxi_test_distributed_test_coll_SOURCES = \
+	prov/cxi/test/distributed/pmi_utils.h \
+	prov/cxi/test/distributed/pmi_utils.c \
+	prov/cxi/test/distributed/pmi_frmwk.h \
+	prov/cxi/test/distributed/pmi_frmwk.c \
 	prov/cxi/test/distributed/test_coll.c
-prov_cxi_test_distributed_test_coll_LDFLAGS = -static
-prov_cxi_test_distributed_test_coll_LDADD = prov/cxi/lib/libfrmwk.la \
-	$(linkback) $(PTHREAD_LIBS)
+prov_cxi_test_distributed_test_coll_CPPFLAGS = \
+	$(AM_CPPFLAGS) $(cxi_CPPFLAGS) $(PTHREAD_FLAGS) \
+	-DUSE_PMI2
+prov_cxi_test_distributed_test_coll_LDFLAGS = -static -lpmi2
+prov_cxi_test_distributed_test_coll_LDADD = $(linkback) $(PTHREAD_LIBS)
 
 endif HAVE_PMI
 
@@ -137,19 +143,6 @@ prov_cxi_test_cxitest_LDFLAGS = $(cxitest_LDFLAGS) -static
 prov_cxi_test_cxitest_LDADD =  $(cxitest_LIBS) $(linkback) $(PTHREAD_LIBS)
 
 TESTS += prov/cxi/test/cxitest
-
-if HAVE_PMI
-
-#nodist_prov_cxi_test_cxitest_SOURCES += \
-#	prov/cxi/test/pmi_utils.c \
-#	prov/cxi/test/cxip_test_pmi.c \
-#	prov/cxi/test/coll_mcast.c
-
-#prov_cxi_test_cxitest_CPPFLAGS += -DUSE_PMI2 -DUSE_CRAY_PMI
-#prov_cxi_test_cxitest_CPPFLAGS += -I /opt/cray/pe/pmi/default/include
-#prov_cxi_test_cxitest_LDADD += -lpmi2
-
-endif HAVE_PMI
 
 endif HAVE_CRITERION
 
