iouring: Add io_uring operations to be used by sockapi
The patch adds the file src/iouring.c where are listed all the
definitions related to io_uring.

In addition, configure.ac was modified to export the autoconf
variable HAVE_LIBURING and which is used to determine whether
src/iouring.c must be compiled or not.

Signed-off-by: Sylvain Didelot <sdidelot@ddn.com>

--- a/configure.ac
+++ b/configure.ac
@@ -546,6 +546,7 @@ AS_IF([test x"$with_uring" != x"no"],
 AS_IF([test x"$with_uring" != x"no" && test -n "$with_uring" && test $have_liburing -eq 0],
 	[AC_MSG_ERROR([io_uring support requested but liburing not available.])],
 	[])
+AM_CONDITIONAL([HAVE_LIBURING], test "$have_liburing" -eq 1)
 
 AS_IF([test x"$with_uring" != x"yes" && test x"$with_uring" != x"no"],
 	[CPPFLAGS="$CPPFLAGS $uring_CPPFLAGS"
